--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /Test/c_safe_math/Debug
+/Test/c_safe_math/x64/Debug
+/Test/c_safe_math/c_safe_math.vcxproj.filters
+/Test/c_safe_math/c_safe_math.vcxproj.user
