Initial multiplication tests, refactor to maintain just one test array across both C and C++ libraries, starting with multiplication.

--- a/Test/SafeIntTestVS17/SafeIntTestVS17/SafeIntTestVS17.vcxproj
+++ b/Test/SafeIntTestVS17/SafeIntTestVS17/SafeIntTestVS17.vcxproj
@@ -129,6 +129,7 @@
     <ClCompile Include="..\..\TestMain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\MultVerify.h" />
     <ClInclude Include="..\..\TestMain.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
