--- a/Test/SafeIntTestVS17/SafeIntTestVS17/SafeIntTestVS17.vcxproj.filters
+++ b/Test/SafeIntTestVS17/SafeIntTestVS17/SafeIntTestVS17.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="..\..\MultVerify.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\TestCase.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
