Factor out test cases into independent file

--- a/Test/SafeIntTestVS17/SafeIntTestVS17/SafeIntTestVS17.vcxproj
+++ b/Test/SafeIntTestVS17/SafeIntTestVS17/SafeIntTestVS17.vcxproj
@@ -121,6 +121,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\AddVerify.cpp" />
     <ClCompile Include="..\..\CastVerify.cpp" />
+    <ClCompile Include="..\..\DivTestCase.cpp" />
     <ClCompile Include="..\..\DivVerify.cpp" />
     <ClCompile Include="..\..\IncDecVerify.cpp" />
     <ClCompile Include="..\..\ModVerify.cpp" />
@@ -130,7 +131,6 @@
     <ClCompile Include="..\..\TestMain.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\MultVerify.h" />
     <ClInclude Include="..\..\TestCase.h" />
     <ClInclude Include="..\..\TestMain.h" />
   </ItemGroup>
