Division tests complete for C library

--- a/Test/c_safe_math/c_safe_math.vcxproj
+++ b/Test/c_safe_math/c_safe_math.vcxproj
@@ -139,9 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\DivTestCase.cpp" />
     <ClCompile Include="..\MultTestCase.cpp" />
     <ClCompile Include="safe_math_test.c" />
     <ClCompile Include="safe_math_test_add.cpp" />
+    <ClCompile Include="safe_math_test_div.cpp" />
     <ClCompile Include="safe_math_test_mult.cpp" />
   </ItemGroup>
   <ItemGroup>
