--- a/Test/SafeIntTestVS17/SafeIntTestVS17/SafeIntTestVS17.vcxproj
+++ b/Test/SafeIntTestVS17/SafeIntTestVS17/SafeIntTestVS17.vcxproj
@@ -127,6 +127,7 @@
     <ClCompile Include="..\..\ModVerify.cpp" />
     <ClCompile Include="..\..\MultTestCase.cpp" />
     <ClCompile Include="..\..\MultVerify.cpp" />
+    <ClCompile Include="..\..\SubTestCase.cpp" />
     <ClCompile Include="..\..\SubVerify.cpp" />
     <ClCompile Include="..\..\TestMain.cpp" />
   </ItemGroup>
