Subtraction tests for C complete and verified against SafeInt

--- a/Test/c_safe_math/c_safe_math.vcxproj
+++ b/Test/c_safe_math/c_safe_math.vcxproj
@@ -141,10 +141,12 @@
   <ItemGroup>
     <ClCompile Include="..\DivTestCase.cpp" />
     <ClCompile Include="..\MultTestCase.cpp" />
+    <ClCompile Include="..\SubTestCase.cpp" />
     <ClCompile Include="safe_math_test.c" />
     <ClCompile Include="safe_math_test_add.cpp" />
     <ClCompile Include="safe_math_test_div.cpp" />
     <ClCompile Include="safe_math_test_mult.cpp" />
+    <ClCompile Include="safe_math_test_sub.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\safe_math.h" />
