--- a/Test/SafeIntTestVS17/SafeIntTestVS17/SafeIntTestVS17.vcxproj
+++ b/Test/SafeIntTestVS17/SafeIntTestVS17/SafeIntTestVS17.vcxproj
@@ -119,6 +119,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\AddTestCase.cpp" />
     <ClCompile Include="..\..\AddVerify.cpp" />
     <ClCompile Include="..\..\CastVerify.cpp" />
     <ClCompile Include="..\..\DivTestCase.cpp" />
