--- a/Test/SafeIntTestVS17/SafeIntTestVS17/SafeIntTestVS17.vcxproj.filters
+++ b/Test/SafeIntTestVS17/SafeIntTestVS17/SafeIntTestVS17.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="..\..\SubTestCase.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\AddTestCase.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\TestMain.h">
