Standardize addition test cases

--- a/Test/c_safe_math/c_safe_math.vcxproj
+++ b/Test/c_safe_math/c_safe_math.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\AddTestCase.cpp" />
     <ClCompile Include="..\DivTestCase.cpp" />
     <ClCompile Include="..\MultTestCase.cpp" />
     <ClCompile Include="..\SubTestCase.cpp" />
