--- a/Test/GccTest/CMakeLists.txt
+++ b/Test/GccTest/CMakeLists.txt
@@ -40,12 +40,16 @@ else()
     # This will test whatever the mainline code can do, typically using int128
     add_executable(SafeIntTest_gcc 
         ../AddVerify.cpp 
+        ../AddTestCase.cpp
         ../CastVerify.cpp 
         ../DivVerify.cpp 
+        ../DivTestCase.cpp
         ../IncDecVerify.cpp 
         ../ModVerify.cpp 
         ../MultVerify.cpp 
+        ../MultTestCase.cpp
         ../SubVerify.cpp 
+        ../SubTestCase.cpp
         ../TestMain.cpp
         ../TestMain.h
         ../../SafeInt.hpp
@@ -54,12 +58,16 @@ else()
     # Forces use of the older, less efficient code that can't use either int128 or intrinsics
     add_executable(SafeIntTest_gcc_NoIntrinsic
         ../AddVerify.cpp 
+        ../AddTestCase.cpp
         ../CastVerify.cpp 
         ../DivVerify.cpp 
+        ../DivTestCase.cpp
         ../IncDecVerify.cpp 
         ../ModVerify.cpp 
         ../MultVerify.cpp 
+        ../MultTestCase.cpp
         ../SubVerify.cpp 
+        ../SubTestCase.cpp
         ../TestMain.cpp
         ../TestMain.h
         ../../SafeInt.hpp
@@ -70,12 +78,16 @@ else()
     # Forces use of either intrinsics or the older code
     add_executable(SafeIntTest_gcc_NoInt128
         ../AddVerify.cpp 
+        ../AddTestCase.cpp
         ../CastVerify.cpp 
         ../DivVerify.cpp 
+        ../DivTestCase.cpp
         ../IncDecVerify.cpp 
         ../ModVerify.cpp 
         ../MultVerify.cpp 
+        ../MultTestCase.cpp
         ../SubVerify.cpp 
+        ../SubTestCase.cpp
         ../TestMain.cpp
         ../TestMain.h
         ../../SafeInt.hpp
@@ -111,6 +123,31 @@ else()
 
     target_compile_options(CompileTest_gcc14_NoEH PUBLIC -Wall -std=c++14 -fno-exceptions)
 
+    add_executable(safe_math_test_gcc
+    ../c_safe_math/safe_math_test.c
+    ../c_safe_math/safe_math_test.h
+    ../c_safe_math/safe_math_test_add.cpp
+    ../c_safe_math/safe_math_test_div.cpp
+    ../c_safe_math/safe_math_test_mult.cpp
+    ../c_safe_math/safe_math_test_sub.cpp
+    ../AddTestCase.cpp
+    ../DivTestCase.cpp
+    ../MultTestCase.cpp
+    ../SubTestCase.cpp
+    )
+
+    target_compile_definitions(safe_math_test_gcc PUBLIC)
+    target_compile_options(safe_math_test_gcc PUBLIC)
+
+    add_executable(safe_math_compile_gcc
+    ../c_safe_math/safe_math_compile.c
+    ../../safe_math.h
+    ../../safe_math_impl.h
+)
+
+target_compile_options(safe_math_compile_gcc PUBLIC -Wall)
+
+
 endif()
 
 
@@ -120,10 +157,11 @@ if(GCC_PLUS_PLUS)
     add_test(NAME SafeIntTest_gcc COMMAND SafeIntTest_gcc)
     add_test(NAME SafeIntTest_gcc_NoIntrinsic COMMAND SafeIntTest_gcc_NoIntrinsic)
     add_test(NAME SafeIntTest_gcc_NoInt128 COMMAND SafeIntTest_gcc_NoInt128)
-
+    add_test(NAME safe_math_test_gcc COMMAND safe_math_test_gcc)
 
     set_tests_properties(SafeIntTest_gcc 
                         SafeIntTest_gcc_NoIntrinsic 
                         SafeIntTest_gcc_NoInt128 
+                        safe_math_test_gcc
                         PROPERTIES FAIL_REGULAR_EXPRESSION "Error")
 endif()
