--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /Test/c_safe_math/Release
 /Test/c_safe_math/x64/Release
 build/
+/Test/MsvcTest/.vs
+/Test/MsvcTest/CMakeSettings.json
+/.vs
+Test/c_safe_math/c_safe_math.vcxproj
