Add c++17 test for g++

--- a/Test/GccTest/CMakeLists.txt
+++ b/Test/GccTest/CMakeLists.txt
@@ -105,6 +105,15 @@ else()
 
     target_compile_options(CompileTest_gcc PUBLIC -Wall)
 
+    add_executable(CompileTest_gcc17
+        ../CompileTest.cpp
+        ../ConstExpr.cpp 
+        ../CleanCompile.cpp
+        ../../SafeInt.hpp
+    )
+
+    target_compile_options(CompileTest_gcc17 PUBLIC -Wall -std=c++17)
+
     add_executable(CompileTest_gcc14
         ../CompileTest.cpp
         ../ConstExpr.cpp 
