--- a/Test/GccTest/CMakeLists.txt
+++ b/Test/GccTest/CMakeLists.txt
@@ -132,14 +132,20 @@ else()
 
     target_compile_options(CompileTest_gcc14_NoEH PUBLIC -Wall -std=c++14 -fno-exceptions)
 
-    add_executable(CompileTest_gcc98
-    ../CompileTest.cpp
-    ../ConstExpr.cpp 
-    ../CleanCompile.cpp
-    ../../SafeInt.hpp
-    )
+    if(${CMAKE_CXX_COMPILER_VERSION} GREATER_EQUAL "13")
+        message(STATUS "not running c++98 tests")
+    else()
+        add_executable(CompileTest_gcc98
+        ../CompileTest.cpp
+        ../ConstExpr.cpp 
+        ../CleanCompile.cpp
+        ../../SafeInt.hpp
+        )
 
-    target_compile_options(CompileTest_gcc98 PUBLIC -D SAFEINT_USE_CPLUSCPLUS_98 -Wall -std=c++98 -fno-exceptions)
+        target_compile_options(CompileTest_gcc98 PUBLIC -D SAFEINT_USE_CPLUSCPLUS_98 -Wall -std=c++98 -fno-exceptions)
+    endif()
+
+
 
     add_executable(safe_math_test_gcc
     ../c_safe_math/safe_math_test.c
